# vpn9-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.agent  Dockerfile.build-vpn9-pop  Dockerfile.control-plane  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-control-plane.yml  release.yml  rust-ci.yml
alpine-build/: README.md
alpine-build/keys/: build-6888fcb3.rsa  build-6888fcb3.rsa.pub
alpine-build/profiles/: authorized_keys  genapkovl-vpn9-pop.sh  mkimg.vpn9-pop.sh
scripts/: build-all.sh  generate-certs.sh  mkdiskimage-pop.sh  mkimage-pop.sh
vpn9-agent/: Cargo.toml  build.rs
vpn9-agent/src/: agent.rs  agent_id.rs  config.rs  firewall.rs  lib.rs  main.rs  routing.rs  runtime_security.rs  secure_system_info.rs  secure_update_manager.rs  update_manager.rs  version.rs  wireguard_manager.rs
vpn9-control-plane/: Cargo.toml
vpn9-control-plane/src/: agent_manager.rs  config.rs  device_registry.rs  keystore.rs  lease_manager.rs  lib.rs  main.rs  preferred_relay.rs  rest_server.rs  server.rs  service.rs  update_manager.rs  wireguard_manager.rs
vpn9-core/: Cargo.toml  build.rs
vpn9-core/proto/: vpn9.proto
vpn9-core/src/: lib.rs
