[package]
name = "vpn9-agent"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Lightweight VPN9 agent for POP nodes; registers with control plane and configures WireGuard."
keywords = ["vpn", "wireguard", "agent", "grpc", "tls"]
repository.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22"
defguard_wireguard_rs = "0.7.5"
libc = "0.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3"
sysinfo = { version = "0.36.1", features = ["linux-netdevs"] }
thiserror = "2.0"
tokio = { version = "1.47.0", features = ["full"] }
tonic = { version = "0.14.0", features = ["tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
uuid = { version = "1.17.0", features = ["v4", "v5"] }
vpn9-core = { path = "../vpn9-core" }
x25519-dalek = "2.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
chrono = { version = "0.4", features = ["std"] }
