[package]
name = "vpn9-control-plane"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Control plane for VPN9: TLS gRPC server with WireGuard management."
keywords = ["vpn", "wireguard", "grpc", "control-plane", "tls"]
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14.0", features = ["tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.14.0"
sha2 = "0.10"
vpn9-core = { path = "../vpn9-core" }
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tempfile = "3.0"
